add constants to model

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 	<groupId>guru.ruc.domain</groupId>
 	<artifactId>domain-project</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>domain-project</name>
-	<description>Demo project for Spring Boot</description>
+	<description>RUC Domain</description>
 
 	<properties>
 		<java.version>1.8</java.version>
